fix: update hover background color for toggle button to improve visibility

--- a/packages/map-template/src/components/ViewSelector/ViewSelector.scss
+++ b/packages/map-template/src/components/ViewSelector/ViewSelector.scss
@@ -30,7 +30,7 @@
         font: inherit;
 
         &:not(:disabled):hover {
-            background-color: var(--tailwind-colors-gray-50);
+            background-color: var(--tailwind-colors-gray-100);
             border: 1px solid var(--tailwind-colors-gray-200);
         }
     }
